--- a/Components/Pages/RazorComponents/NavBar.razor
+++ b/Components/Pages/RazorComponents/NavBar.razor
@@ -1,2 +1,3 @@
-﻿@namespace SmartRecipes.Client.Components
+﻿@namespace SmartRecipes.Client.Components <!--Важно прописать namespace-->
 
+<div>This is navbar</div>
