Допилил фильтры магазинов

--- a/Components/Pages/RazorComponents/NavBar.razor
+++ b/Components/Pages/RazorComponents/NavBar.razor
@@ -1,3 +1,4 @@
-﻿@namespace SmartRecipes.Client.Components <!--Важно прописать namespace-->
+﻿@namespace SmartRecipes.Client.Components
+<!--Важно прописать namespace-->
 
 <div>This is navbar</div>
