Добавлен компонент шапки

--- a/Components/Pages/Liked.razor
+++ b/Components/Pages/Liked.razor
@@ -1,10 +1,10 @@
-﻿@page "/popular"
+﻿@page "/liked"
 
-<PageTitle>Popular</PageTitle>
+<PageTitle>Liked</PageTitle>
 
 <div class="body">
     <div class="main">
-        <p class="pop-recepies-title">Лучшие блюда за последний !!!</p>
+        <p class="pop-recepies-title">Понравившиеся Вам рецепты находятся здесь:</p>
         <div class="pop-recepies">
             <div class="card long">
                 <p class="card-title">Название блюда</p>
