--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,14 +1,8 @@
 ﻿@page "/home"
 
-<PageTitle>NewHome</PageTitle>
+<PageTitle>Home</PageTitle>
 
 <div class="body">
-    <div class="header">
-        <a class="nav_home" href="newhome"><img src="logo.svg" width="100%" height="100%" alt="главная"></a>
-        <a class="nav scale" href="popular">популярное</a>
-        <a class="nav scale" href="recommendations">рекомендации</a>
-        <a class="nav_home" href="sign_in"><img src="log-in.png" width="100%" height="100%" alt="аккаунт"></a>
-    </div>
     <div class="main">
         <form class="search">
             <input type="text" placeholder="Найти рецепт блюда" class="search-input">
@@ -46,6 +40,4 @@
             </div>
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
 </div>
