--- a/Components/Pages/RazorComponents/NavBar.razor
+++ b/Components/Pages/RazorComponents/NavBar.razor
@@ -1,4 +1,14 @@
 ﻿@namespace SmartRecipes.Client.Components
 <!--Важно прописать namespace-->
 
-<div>This is navbar</div>
+<div class="header">
+    <NavLink class="nav_home" href="home">
+        <img src="img/logo.svg" width="100%" height="100%" alt="главная">
+    </NavLink>
+    <NavLink class="nav scale" href="popular">популярное</NavLink>
+    <NavLink class="nav scale" href="recommendations">рекомендации</NavLink>
+    <NavLink class="nav scale" href="liked">избранное</NavLink>
+    <NavLink class="nav_home" href="sign_in">
+        <img src="img/log-in.png" width="100%" height="100%" alt="аккаунт">
+    </NavLink>
+</div>
