--- a/Components/Pages/Sign_in.razor
+++ b/Components/Pages/Sign_in.razor
@@ -4,7 +4,7 @@
 
 <div class="body">
         <div class="header">
-            <a class="nav_home" href="newhome"><img src="logo.svg" width="100%" height="100%" alt="главная"></a>
+            <a class="nav_home" href="home"><img src="img/logo.svg" width="100%" height="100%" alt="главная"></a>
         </div>
         <div class="main">
             <div style="float: left;">
@@ -25,6 +25,4 @@
                 </form>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src=""></script>
     </div>
