--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/home"
+@using Client.Application.Utilities
 
 <PageTitle>NewHome</PageTitle>
 
@@ -30,20 +31,8 @@
                     <p class="text">8 ингредиентов | 1 час</p>
                 </div>
             </div>
-            <div class="card">
-                <img class="images" src="8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="images" src="8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
+            <Card CardType="CardTypes.Small" Model="null" />
+            
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
