Навела красоту на главной странице

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -4,36 +4,13 @@
 
 <div class="body">
     <div class="main">
+        <SmartRecipes.Server.Components.Pages.RazorComponents.SearchBar />
         <p class="pop-recepies-title">Популярные рецепты:</p>
         <div class="pop-recepies">
-            <div class="card">
-                <img class="images" src="img/8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="images" src="8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="images" src="8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="images" src="8_march.jpeg" width="120px" height="120px">
-                <div>
-                    <p class="card-title">Название блюда</p>
-                    <p class="text">8 ингредиентов | 1 час</p>
-                </div>
-            </div>
+            <Card CardType="Client.Application.Utilities.CardTypes.Small" Model="new()"></Card>
+            <Card CardType="Client.Application.Utilities.CardTypes.Small" Model="new()"></Card>
+            <Card CardType="Client.Application.Utilities.CardTypes.Small" Model="new()"></Card>
+            <Card CardType="Client.Application.Utilities.CardTypes.Small" Model="new()"></Card>
         </div>
     </div>
 </div>
