--- a/Components/Pages/RazorComponents/Card.razor
+++ b/Components/Pages/RazorComponents/Card.razor
@@ -43,7 +43,7 @@
                 IngedientsCount = 8,
                 TimeToCook = 1,
                 Rating = new() { { "likes", 17 }, { "dislikes", 10 } },
-                Image = "/",
+                Image = "img/8_march.jpeg",
                 ID = "1"
             };
     }
