--- a/Components/App.razor
+++ b/Components/App.razor
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="SmartRecipes.Server.styles.css" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <HeadOutlet />
 </head>
 
