--- a/Components/Pages/RazorComponents/SearchBar.razor
+++ b/Components/Pages/RazorComponents/SearchBar.razor
@@ -1,7 +1,7 @@
 ﻿@using HTTPModels.Search
 
 <EditForm class="search" Model="Model" OnSubmit="Submit">
-    <InputText class="search-input" @bind-Value="Model.SearchString"></InputText>
+    <InputText class="search input" @bind-Value="Model.SearchString"></InputText>
     <button class="search-container" type="submit">
         <img src="img/search.png" width="25px" height="25px">
     </button>
