--- a/Components/Pages/Sign_in.razor
+++ b/Components/Pages/Sign_in.razor
@@ -1,4 +1,5 @@
 ﻿@page "/sign_in"
+@namespace SmartRecipes.Server.Components.Pages.RazorComponents
 
 <PageTitle>Sign in</PageTitle>
 
@@ -7,22 +8,7 @@
             <a class="nav_home" href="home"><img src="img/logo.svg" width="100%" height="100%" alt="главная"></a>
         </div>
         <div class="main">
-            <div style="float: left;">
-                <form class="auth">
-                    <p class="card-title">Вход</p>
-                    <input type="email" placeholder="Введите почту">
-                    <input type="password" placeholder="Пароль">
-                    <a class="access" href="home copy.html">Вход</a>
-                </form>
-            </div>
-            <div style="float: right;">
-                <form class="auth">
-                    <p class="card-title">Регистрация</p>
-                    <input type="email" placeholder="Введите почту">
-                    <input type="password" placeholder="Пароль">
-                    <input type="password" placeholder="Подтвердите пароль">
-                    <a class="access" href="home copy.html">Регистрация</a>
-                </form>
-            </div>
+            <Login />
+            <Register />
         </div>
     </div>
