--- a/Components/Pages/Popular.razor
+++ b/Components/Pages/Popular.razor
@@ -6,10 +6,7 @@
     <div class="main">
         <p class="pop-recepies-title">Лучшие блюда за последний !!!</p>
         <div class="pop-recepies">
-            <div class="card long">
-                <p class="card-title">Название блюда</p>
-                <p class="text">8 ингредиентов | 1 час</p>
-            </div>
+            <Card CardType="Client.Application.Utilities.CardTypes.Wide" Model="new()"></Card>
         </div>
     </div>
 </div>
