--- a/Components/Pages/RazorComponents/Card.razor
+++ b/Components/Pages/RazorComponents/Card.razor
@@ -3,9 +3,9 @@
 @using SmartRecipes.Client.Application.Utilities
 <!--Важно прописать namespace-->
 
-<NavLink href="@($"recipes/{Model.ID}")" class="scale">
-    <div class="card @cardType">
-        <img class="images" src="@Model.Image" width="120px" height="120px">
+<NavLink href="@($"recipes/{Model.ID}")">
+    <div class="card @cardType scale">
+        <img class="images" src="@Model.Image">
         <div>
             <p class="card-title">@Model.Name</p>
             <p class="text">@Model.IngedientsCount ингредиентов | @Model.TimeToCook час(ов)</p>
