--- a/Components/Pages/RazorComponents/Card.razor.css
+++ b/Components/Pages/RazorComponents/Card.razor.css
@@ -1,15 +1,18 @@
 ﻿.card {
     background: #e9e9e9;
-    width: 450px;
+    width: 30vw;
+    height: 20vh;
     padding: 2vh 2vw 2vh;
     display: flex;
     flex-direction: row;
     border-radius: 0.8em;
-    margin: 20px 0px 20px;
+    margin: 20px 20px 20px;
 }
 
 .images {
     border-radius: 0.8em;
+    width: 35%;
+    height: 100%;
 }
 
 .text {
@@ -30,7 +33,7 @@
 }
 
 .scale:hover {
-    transform: scale(1);
+    transform: scale(1.08);
 }
 
 .long {
