Изменения во внешнем виде карточки и поисковой строки

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -9,10 +9,10 @@
         <SearchBar />
         <p class="pop-recepies-title">Популярные рецепты:</p>
         <div class="pop-recepies">
-            <Card CardType="CardTypes.Small" Model="new()"></Card>
-            <Card CardType="CardTypes.Small" Model="new()"></Card>
-            <Card CardType="CardTypes.Small" Model="new()"></Card>
-            <Card CardType="CardTypes.Small" Model="new()"></Card>
+            <Card CardType="CardTypes.Small" Model="new()" />
+            <Card CardType="CardTypes.Small" Model="new()" />
+            <Card CardType="CardTypes.Small" Model="new()" />
+            <Card CardType="CardTypes.Small" Model="new()" />
         </div>
     </div>
 </div>
