--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -105,11 +105,12 @@ input:focus {outline:none!important;}
 }
 
 .pop-recepies {
-    max-width: 75vw;
+    max-width: 80vw;
     vertical-align: middle;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
