--- a/Components/Pages/Liked.razor
+++ b/Components/Pages/Liked.razor
@@ -1,4 +1,6 @@
 ﻿@page "/liked"
+@namespace SmartRecipes.Server.Components.Pages.RazorComponents
+@using SmartRecipes.Client.Application.Utilities
 
 <PageTitle>Liked</PageTitle>
 
@@ -6,10 +8,10 @@
     <div class="main">
         <p class="pop-recepies-title">Понравившиеся Вам рецепты находятся здесь:</p>
         <div class="pop-recepies">
-            <div class="card long">
-                <p class="card-title">Название блюда</p>
-                <p class="text">8 ингредиентов | 1 час</p>
-            </div>
+            <Card CardType="CardTypes.Wide" Model="new()"></Card>
+            <Card CardType="CardTypes.Wide" Model="new()"></Card>
+            <Card CardType="CardTypes.Wide" Model="new()"></Card>
+            <Card CardType="CardTypes.Wide" Model="new()"></Card>
         </div>
     </div>
 </div>
