--- a/Components/Pages/RazorComponents/Card.razor.css
+++ b/Components/Pages/RazorComponents/Card.razor.css
@@ -1,6 +1,7 @@
 ﻿.card {
     background: #e9e9e9;
-    width: 450px;
+    width: 30vw;
+    height: 20vh;
     padding: 2vh 2vw 2vh;
     display: flex;
     flex-direction: row;
@@ -10,6 +11,8 @@
 
 .images {
     border-radius: 0.8em;
+    width: 35%;
+    height: 100%;
 }
 
 .text {
